# happifyml

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  test.py
.github/workflows/: code-format.yaml  train_deploy.yaml
happifyml/: __init__.py  __main__.py  version.py
happifyml/cli/: __init__.py  cloud.py  credentials.py  deployment.py  init_project.py  project.py
happifyml/integrations/: __init__.py  azure.py
happifyml/templates/pl_research_template/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  requirements.txt
happifyml/templates/pl_research_template/configs/: config.yaml
happifyml/templates/pl_research_template/configs/callbacks/: default.yaml
happifyml/templates/pl_research_template/configs/datamodule/: sample_datamodule.yaml
happifyml/templates/pl_research_template/configs/experiment/: example_full.yaml
happifyml/templates/pl_research_template/configs/hparams_search/: wandb.yaml
happifyml/templates/pl_research_template/configs/logger/: multi_loggers.yaml
happifyml/templates/pl_research_template/configs/model/: sample_model.yaml
happifyml/templates/pl_research_template/configs/tokenizer/: default.yaml
happifyml/templates/pl_research_template/configs/trainer/: ddp.yaml  deepspeed.yaml  default.yaml
happifyml/templates/pl_research_template/src/: tokenizer.py  train.py
happifyml/templates/pl_research_template/src/callbacks/: wandb_callbacks.py
happifyml/utils/: __init__.py  azure.py  cli.py  credentials.py  environments.py
utils/: release.py
(+3 files in other folders)
