[metadata]
project_name = happifyml
author = Thomas Yue
contact = thomas@happify.com
description_file = README.md


[isort]
default_section = FIRSTPARTY
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = happifyml
line_length = 119
profile = black
filter_files = True
known_third_party =
    absl
    conllu
    datasets
    elasticsearch
    fairseq
    faiss-cpu
    fastprogress
    fire
    fugashi
    git
    h5py
    matplotlib
    nltk
    numpy
    packaging
    pandas
    PIL
    psutil
    pytest
    pytorch_lightning
    rouge_score
    sacrebleu
    seqeval
    sklearn
    streamlit
    tensorboardX
    tensorflow
    tensorflow_datasets
    timeout_decorator
    transformers
    torch
    torchaudio
    torchtext
    torchvision
    torch_xla
    tqdm


[flake8]
max_line_length = 119
show_source = True
format = pylint
ignore =
    F401
    W504
    F841
    E203
    W503
exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*


[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
addopts =
    --durations=0
    --strict-markers
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
